corrected answer checking

--- a/index/index.html
+++ b/index/index.html
@@ -14,7 +14,7 @@
   <body>
     Sort the numbers from lowest to highest!
     <br>
-    How many numbers do you want to sort?
+    How many numbers do you want to sort? (1-10)
     <br>
     <input type="number" id="numberInput" min="1" max="10" step="1" oninput="validity.valid||(value='');"></input>
     <button onclick="startGame(document.getElementById('numberInput').value)">Time to start sorting!</button>
